payload 1.0.36: revert ZGC → G1 v1 (1.0.33 settings)
MrCedriic 08:41 report on ZGC (1.0.35):
 - ZGC STW pauses are sub-ms as advertised (Minor: 64×0ms, Major: 57×0ms)
 - BUT ZGC Major Cycles ate CPU concurrently. When heap hit 75%+ ZGC
   fired Major cycles back-to-back, ~25 s of concurrent GC work in 11
   cycles, starving the render thread.
 - Result: glfwPollEvents stalls 2300-3665 ms each (vs 1264 ms G1 v1).
   Stalls fewer (13 vs 25 in 3 min) but each visibly LONGER. Bad UX.

Lesson: ZGC needs more headroom than 8 GB heap allows with 193 mods +
20 MB/s sustained alloc. Revert to G1 v1 baseline (1.0.33 settings)
which had the smallest known max stalls until we can:
 (a) reduce mod count, (b) raise default heap, (c) make Iris optional.

Keep AWT mitigation flags (independent of GC choice, no regression).